Ensure pager does not overlap tiles

--- a/sites/all/themes/custom/parliamentwatch/scss/_utilities.scss
+++ b/sites/all/themes/custom/parliamentwatch/scss/_utilities.scss
@@ -330,6 +330,7 @@ figcaption {
 /* Pager */
 
 .pager {
+  clear: both;
   list-style: none;
   padding: $space 0;
   margin: 0;
